versioned_docs/version-22.2/reference/rpk/index.mdx
---
title: rpk Commands
---

<head>
  <meta name="title" content="rpk Commands list | Redpanda Docs" />
  <meta name="description" content="rpk Commands" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/" />
</head>

Here are some reference pages about what else Redpanda has to offer:

- [rpk](rpk-commands)
- [rpk acl](rpk-acl)
  - [rpk acl create](rpk-acl/rpk-acl-create)
  - [rpk acl delete](rpk-acl/rpk-acl-delete)
  - [rpk acl user](rpk-acl/rpk-acl-user)
    - [rpk acl user create](rpk-acl/rpk-acl-user-create)
    - [rpk acl user delete](rpk-acl/rpk-acl-user-delete)
    - [rpk acl user list](rpk-acl/rpk-acl-user-list)
- [rpk cluster](rpk-cluster)
  - [rpk cluster config](rpk-cluster/rpk-cluster-config)
    - [rpk cluster config edit](rpk-cluster/rpk-cluster-config-edit)
    - [rpk cluster config export](rpk-cluster/rpk-cluster-config-export)
    - [rpk cluster config force-reset](rpk-cluster/rpk-cluster-config-force-reset)
    - [rpk cluster config get](rpk-cluster/rpk-cluster-config-get)
    - [rpk cluster config import](rpk-cluster/rpk-cluster-config-import)
    - [rpk cluster config lint](rpk-cluster/rpk-cluster-config-lint)
    - [rpk cluster config set](rpk-cluster/rpk-cluster-config-set)
    - [rpk cluster config status](rpk-cluster/rpk-cluster-config-status)
  - [rpk cluster health](rpk-cluster/rpk-cluster-health)
  - [rpk cluster license](rpk-cluster/rpk-cluster-license)
    - [rpk cluster license info](rpk-cluster/rpk-cluster-license-info)
    - [rpk cluster license set](rpk-cluster/rpk-cluster-license-set)
  - [rpk cluster logdirs](rpk-cluster/rpk-cluster-logdirs)
    - [rpk cluster logdirs describe](rpk-cluster/rpk-cluster-logdirs-describe)
  - [rpk cluster maintenance](rpk-cluster/rpk-cluster-maintenance)
    - [rpk cluster maintenance disable](rpk-cluster/rpk-cluster-maintenance-disable)
    - [rpk cluster maintenance enable](rpk-cluster/rpk-cluster-maintenance-enable)
    - [rpk cluster maintenance status](rpk-cluster/rpk-cluster-maintenance-status)
  - [rpk cluster metadata](rpk-cluster/rpk-cluster-metadata)
  - [rpk cluster partitions](rpk-cluster/rpk-cluster-partitions)
    - [rpk cluster partitions balancer-status](rpk-cluster/rpk-cluster-partitions-balancer-status)
    - [rpk cluster partitions movement-cancel](rpk-cluster/rpk-cluster-partitions-movement-cancel)
- [rpk container](rpk-container)
  - [rpk container purge](rpk-container/rpk-container-purge)
  - [rpk container start](rpk-container/rpk-container-start)
  - [rpk container stop](rpk-container/rpk-container-stop)
- [rpk debug](rpk-debug)
  - [rpk debug bundle](rpk-debug/rpk-debug-bundle)
- [rpk generate](rpk-generate)
  - [rpk generate grafana-dashboard](rpk-generate/rpk-generate-grafana-dashboard)
  - [rpk generate prometheus-config](rpk-generate/rpk-generate-prometheus-config)
  - [rpk generate shell-completion](rpk-generate/rpk-generate-shell-completion)
- [rpk group](rpk-group)
  - [rpk group delete](rpk-group/rpk-group-delete)
  - [rpk group describe](rpk-group/rpk-group-describe)
  - [rpk group list](rpk-group/rpk-group-list)
  - [rpk group seek](rpk-group/rpk-group-seek)
- [rpk help](rpk-help)
- [rpk iotune](rpk-iotune)
- [rpk plugin](rpk-plugin)
  - [rpk plugin list](rpk-plugin/rpk-plugin-list)
  - [rpk plugin uninstall](rpk-plugin/rpk-plugin-uninstall)
  - [rpk plugin install](rpk-plugin/rpk-plugin-install)
- [rpk redpanda](rpk-redpanda)
  - [rpk redpanda admin](rpk-redpanda/rpk-redpanda-admin)
    - [rpk redpanda admin brokers](rpk-redpanda/rpk-redpanda-admin-brokers)
      - [rpk redpanda admin brokers decommission](rpk-redpanda/rpk-redpanda-admin-brokers-decommission)
      - [rpk redpanda admin brokers list](rpk-redpanda/rpk-redpanda-admin-brokers-list)
      - [rpk redpanda admin brokers recommission](rpk-redpanda/rpk-redpanda-admin-brokers-recommission)
    - [rpk redpanda admin config](rpk-redpanda/rpk-redpanda-admin-config)
      - [rpk redpanda admin config log-level set](rpk-redpanda/rpk-redpanda-admin-config-log-level-set)
      - [rpk redpanda admin config log-level](rpk-redpanda/rpk-redpanda-admin-config-log-level)
      - [rpk redpanda admin config print](rpk-redpanda/rpk-redpanda-admin-config-print)
    - [rpk redpanda admin partitions](rpk-redpanda/rpk-redpanda-admin-partitions)
      - [rpk redpanda admin partitions list](rpk-redpanda/rpk-redpanda-admin-partitions-list)
  - [rpk redpanda check](rpk-redpanda/rpk-redpanda-check)
  - [rpk redpanda config](rpk-redpanda/rpk-redpanda-config)
    - [rpk redpanda config bootstrap](rpk-redpanda/rpk-redpanda-config-bootstrap)
    - [rpk redpanda config init](rpk-redpanda/rpk-redpanda-config-init)
    - [rpk redpanda config set](rpk-redpanda/rpk-redpanda-config-set)
  - [rpk redpanda mode](rpk-redpanda/rpk-redpanda-mode)
  - [rpk redpanda start](rpk-redpanda/rpk-redpanda-start)
  - [rpk redpanda stop](rpk-redpanda/rpk-redpanda-stop)
  - [rpk redpanda tune](rpk-redpanda/rpk-redpanda-tune)
    - [rpk redpanda tune list](rpk-redpanda/rpk-redpanda-tune-list)
- [rpk topic](rpk-topic)
  - [rpk topic add-partitions](rpk-topic/rpk-topic-add-partitions)
  - [rpk topic alter-config](rpk-topic/rpk-topic-alter-config)
  - [rpk topic consume](rpk-topic/rpk-topic-consume)
  - [rpk topic create](rpk-topic/rpk-topic-create)
  - [rpk topic delete](rpk-topic/rpk-topic-delete)
  - [rpk topic describe](rpk-topic/rpk-topic-describe)
  - [rpk topic list](rpk-topic/rpk-topic-list)
  - [rpk topic-produce](rpk-topic/rpk-topic-produce)
- [rpk version](rpk-version)
- [rpk wasm](rpk-wasm)
  - [rpk wasm deploy](rpk-wasm/rpk-wasm-deploy)
  - [rpk wasm generate](rpk-wasm/rpk-wasm-generate)
  - [rpk wasm remove](rpk-wasm/rpk-wasm-remove)
